--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
           name: merlin.${{ inputs.version }}.tar
       - name: Retag and Push Docker Image
         run: |
-          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}:gojek/merlin:${{ inputs.version }}"
+          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}/gojek/merlin:${{ inputs.version }}"
           docker login ${{ env.DOCKER_REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.ghcr_token }}
           docker image load --input merlin.${{ inputs.version }}.tar
           docker tag merlin:${{ inputs.version }} ${IMAGE_TAG}
@@ -65,7 +65,7 @@ jobs:
           name: merlin-transformer.${{ inputs.version }}.tar
       - name: Retag and Push Docker Image
         run: |
-          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}:gojek/merlin-transformer:${{ inputs.version }}"
+          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}/gojek/merlin-transformer:${{ inputs.version }}"
           docker login ${{ env.DOCKER_REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.ghcr_token }}
           docker image load --input merlin-transformer.${{ inputs.version }}.tar
           docker tag merlin-transformer:${{ inputs.version }} ${IMAGE_TAG}
@@ -80,7 +80,7 @@ jobs:
           name: merlin-pyspark-base.${{ inputs.version }}.tar
       - name: Retag and Push Docker Image
         run: |
-          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}:gojek/merlin-pyspark-base:${{ inputs.version }}"
+          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}/gojek/merlin-pyspark-base:${{ inputs.version }}"
           docker login ${{ env.DOCKER_REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.ghcr_token }}
           docker image load --input merlin-pyspark-base.${{ inputs.version }}.tar
           docker tag merlin-pyspark-base:${{ inputs.version }} ${IMAGE_TAG}
@@ -95,7 +95,7 @@ jobs:
           name: merlin-pyfunc-base.${{ inputs.version }}.tar
       - name: Retag and Push Docker Image
         run: |
-          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}:gojek/merlin-pyfunc-base:${{ inputs.version }}"
+          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}/gojek/merlin-pyfunc-base:${{ inputs.version }}"
           docker login ${{ env.DOCKER_REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.ghcr_token }}
           docker image load --input merlin-pyfunc-base.${{ inputs.version }}.tar
           docker tag merlin-pyfunc-base:${{ inputs.version }} ${IMAGE_TAG}
