--- a/python/sdk/test/batch/model/env.yaml
+++ b/python/sdk/test/batch/model/env.yaml
@@ -1,5 +1,6 @@
 dependencies:
   - pip:
+      - mlflow==1.20.0
       - scikit-learn==0.20.3
       - joblib==0.13.0
       - numpy==1.19.5 # https://github.com/Azure/MachineLearningNotebooks/issues/1314
