Update CI for automating package publishing (#240)
* Change versioning for package

* Set fetch depth to 0

* Add release step at the end of CI

* Fix reference to release workflow

* Fix bad subtitution

* Add create-version as dependency to release workflow

* Add secret to release workflow

* FIx incorrect docker tag

* Change transformer test to use custom echo model

* Update pyfunc test to include retry

* Use checkout v3

* Add git fetch

* Use checkout v1

* Add strategy for versioning PR

* Use fetch depth 0

* Strip prefix v

* Make sure log_custom_model create unique dir

* Reduce sleep duration when waiting for batch prediction job

* Fix incorrect assertion

* Parametrize deployment mode

* Pin mlflow in test

--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -4,10 +4,13 @@ on:
     branches: 
     - main 
     - v1beta1  # TODO: remove v1beta1
+    tags:
+    - v*
   pull_request:
     branches: 
     - main 
     - v1beta1  # TODO: remove v1beta1
+
 
 env:
   ARTIFACT_RETENTION_DAYS: 7
@@ -20,12 +23,22 @@ jobs:
       version: ${{ steps.create_version.outputs.version }}
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - id: create_version
         name: Create version string
         run: |
-          # This version will be used to identify intermediary artifact published to github
-          VERSION=$(git rev-parse --short=10 HEAD)
+          # Strip git ref prefix from version
+          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+          [ "$VERSION" == "main" ] && VERSION=$(git describe --tags --always --first-parent)
 
+          # Strip "v" prefix
+          [[ "${VERSION}" == "v"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+
+          # If it's pull request the version string is prefixed by 0.0.0-
+          [ ${{ github.event_name}} == "pull_request" ] && VERSION="0.0.0-${{ github.event.pull_request.head.sha }}"
+
+          echo ${VERSION}
           echo "::set-output name=version::${VERSION}"
 
   test-batch-predictor:
@@ -410,3 +423,19 @@ jobs:
           echo "::group::Transformer log"
           kubectl logs -l component=transformer -c kserve-container -n merlin-e2e
           echo "::endgroup::"
+
+  release:
+    uses: ./.github/workflows/release.yml
+    needs:
+    - create-version
+    - e2e-test
+    - test-api
+    - test-python-sdk
+    - test-pyfunc-server
+    - test-batch-predictor
+    with:
+      version: ${{ needs.create-version.outputs.version }}
+    secrets:
+      pypi_username: ${{ secrets.PYPI_USERNAME }}
+      pypi_password: ${{ secrets.PYPI_PASSWORD }}
+      ghcr_token: ${{ secrets.GHCR_TOKEN }}
