--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,18 @@
 name: Merlin Release CI
 on:
-  workflow_run:
-    workflows: [Merlin CI Workflow]
-    types:
-      - completed
+  workflow_call:
+    inputs:
+      version:
+        required: true
+        type: string
+    secrets:
+      ghcr_token:
+        required: true
+      pypi_username:
+        required: true
+      pypi_password:
+        required: true
+
 env:
   DOCKER_REGISTRY: ghcr.io
 
@@ -23,91 +32,71 @@ jobs:
           pip install setuptools wheel twine
       - name: Build and publish
         env:
-          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+          TWINE_USERNAME: ${{ secrets.pypi_username }}
+          TWINE_PASSWORD: ${{ secrets.pypi_password }}
         working-directory: ./python/sdk
         run: |
           tag=$(git describe --tags --always --first-parent)
           sed -i -e "s|VERSION = \".*\"|VERSION = \"`echo "${tag//v}"`\"|g" ./merlin/version.py
           python setup.py sdist bdist_wheel
           twine upload dist/*
-  create-version:
-    runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.create_version.outputs.version }}
-    steps:
-      - uses: actions/checkout@v2
-      - id: create_version
-        name: Create version string
-        run: |
-          # This version will be used to identify intermediary artifact published to github
-          VERSION=$(git rev-parse --short=10 HEAD)
-          echo "::set-output name=version::${VERSION}"
 
   publish-api:
-    # if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     steps:
       - name: Download API Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin.${{ needs.create-version.outputs.version }}.tar
+          name: merlin.${{ inputs.version }}.tar
       - name: Retag and Push Docker Image
         run: |
-          RELEASE_VERSION=${$(git describe --tags --always --first-parent)//v}
-          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}:gojek/merlin:${RELEASE_VERSION}"
-          docker login ${{ env.DOCKER_REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.GHCR_TOKEN }}
-          docker image load --input merlin.${{ needs.create-version.outputs.version }}.tar
-          docker tag merlin:${{ needs.create-version.outputs.version }} ${IMAGE_TAG}
+          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}/gojek/merlin:${{ inputs.version }}"
+          docker login ${{ env.DOCKER_REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.ghcr_token }}
+          docker image load --input merlin.${{ inputs.version }}.tar
+          docker tag merlin:${{ inputs.version }} ${IMAGE_TAG}
           docker push ${IMAGE_TAG}
 
   publish-transformer:
-    # if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     steps:
       - name: Download API Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin-transformer.${{ needs.create-version.outputs.version }}.tar
+          name: merlin-transformer.${{ inputs.version }}.tar
       - name: Retag and Push Docker Image
         run: |
-          RELEASE_VERSION=${$(git describe --tags --always --first-parent)//v}
-          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}:gojek/merlin-transformer:${RELEASE_VERSION}"
-          docker login ${{ env.DOCKER_REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.GHCR_TOKEN }}
-          docker image load --input merlin-transformer.${{ needs.create-version.outputs.version }}.tar
-          docker tag merlin-transformer:${{ needs.create-version.outputs.version }} ${IMAGE_TAG}
+          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}/gojek/merlin-transformer:${{ inputs.version }}"
+          docker login ${{ env.DOCKER_REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.ghcr_token }}
+          docker image load --input merlin-transformer.${{ inputs.version }}.tar
+          docker tag merlin-transformer:${{ inputs.version }} ${IMAGE_TAG}
           docker push ${IMAGE_TAG}
 
   publish-batch-predictor:
-    # if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     steps:
       - name: Download API Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin-pyspark-base.${{ needs.create-version.outputs.version }}.tar
+          name: merlin-pyspark-base.${{ inputs.version }}.tar
       - name: Retag and Push Docker Image
         run: |
-          RELEASE_VERSION=${$(git describe --tags --always --first-parent)//v}
-          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}:gojek/merlin-pyspark-base:${RELEASE_VERSION}"
-          docker login ${{ env.DOCKER_REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.GHCR_TOKEN }}
-          docker image load --input merlin-pyspark-base.${{ needs.create-version.outputs.version }}.tar
-          docker tag merlin-pyspark-base:${{ needs.create-version.outputs.version }} ${IMAGE_TAG}
+          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}/gojek/merlin-pyspark-base:${{ inputs.version }}"
+          docker login ${{ env.DOCKER_REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.ghcr_token }}
+          docker image load --input merlin-pyspark-base.${{ inputs.version }}.tar
+          docker tag merlin-pyspark-base:${{ inputs.version }} ${IMAGE_TAG}
           docker push ${IMAGE_TAG}
   
   publish-pyfunc:
-    # if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     steps:
       - name: Download API Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar
+          name: merlin-pyfunc-base.${{ inputs.version }}.tar
       - name: Retag and Push Docker Image
         run: |
-          RELEASE_VERSION=${$(git describe --tags --always --first-parent)//v}
-          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}:gojek/merlin-pyfunc-base:${RELEASE_VERSION}"
-          docker login ${{ env.DOCKER_REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.GHCR_TOKEN }}
-          docker image load --input merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar
-          docker tag merlin-pyfunc-base:${{ needs.create-version.outputs.version }} ${IMAGE_TAG}
+          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}/gojek/merlin-pyfunc-base:${{ inputs.version }}"
+          docker login ${{ env.DOCKER_REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.ghcr_token }}
+          docker image load --input merlin-pyfunc-base.${{ inputs.version }}.tar
+          docker tag merlin-pyfunc-base:${{ inputs.version }} ${IMAGE_TAG}
           docker push ${IMAGE_TAG}
