--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -169,6 +169,10 @@ spec:
             value: {{ .Values.merlin.transformer.feast.bigtableCredential}}
           - name: DEFAULT_FEAST_SOURCE
             value: {{ .Values.merlin.transformer.feast.defaultFeastSource}}
+          - name: SIMULATION_FEAST_REDIS_URL
+            value: {{ .Values.merlin.transformer.simulation.feastRedisServingURL}}
+          - name: SIMULATION_FEAST_BIGTABLE_URL
+            value: {{ .Values.merlin.transformer.simulation.feastBigtableServingURL}}
           - name: FEAST_CORE_URL
             value: "{{ .Values.merlin.transformer.feast.coreURL }}"
           - name: FEAST_CORE_AUTH_AUDIENCE
