--- a/ui/package.json
+++ b/ui/package.json
@@ -22,7 +22,8 @@
     "react-lazylog": "git+https://github.com/gojekfarm/react-lazylog.git#e3a7f026983df0dc59d25843fe87ce7e37e24e82",
     "react-scripts": "3.4.1",
     "use-query-params": "^0.6.0",
-    "yup": "^0.29.1"
+    "yup": "^0.29.1",
+    "react-flow-renderer": "10.3.4"
   },
   "devDependencies": {
     "@types/react-dom": "^16.9.8",
