--- a/python/batch-predictor/requirements.txt
+++ b/python/batch-predictor/requirements.txt
@@ -2,5 +2,5 @@ pyspark==2.4.5
 mlflow==1.6.0
 cloudpickle==2.0.0
 pyarrow==0.14.1
-protobuf>=3.0
+protobuf>=3.0,<4.0.0dev
 file:../sdk#egg=merlin-sdk
