--- a/scripts/e2e/config/kserve/kustomization.yaml
+++ b/scripts/e2e/config/kserve/kustomization.yaml
@@ -1,4 +1,8 @@
 resources:
 - kserve.yaml
+# TODO: remove this once kserve 0.9.0 is released
+- temp.yaml
 patchesStrategicMerge:
 - overlay.yaml
+# TODO: remove this once kserve 0.9.0 is released
+- temp-overlay.yaml
