--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "@gojek/mlp-ui": "1.4.4",
     "@reach/router": "1.3.3",
     "@sentry/browser": "5.15.5",
+    "dagre": "^0.8.5",
     "dagre-d3-react": "^0.2.4",
     "js-yaml": "^4.0.0",
     "moment": "2.25.3",
@@ -19,6 +20,7 @@
     "react-collapsed": "^3.0.1",
     "react-dom": "16.13.1",
     "react-ellipsis-text": "^1.2.1",
+    "react-flow-renderer": "10.3.4",
     "react-lazylog": "git+https://github.com/gojekfarm/react-lazylog.git#e3a7f026983df0dc59d25843fe87ce7e37e24e82",
     "react-scripts": "3.4.1",
     "use-query-params": "^0.6.0",
