--- a/examples/batch/env.yaml
+++ b/examples/batch/env.yaml
@@ -1,6 +1,7 @@
 dependencies:
 - pip:
-  - scikit-learn==0.20.3
-  - joblib==0.13.0
-  - pandas==0.25.3
-  - xgboost==0.82
+    - joblib==0.13.0
+    - numpy==1.19.5
+    - scikit-learn==0.23.1
+    - xgboost==0.82
+    - mlflow==1.23.0
