--- a/.github/workflows/trigger-caraml-doc-sync.yml
+++ b/.github/workflows/trigger-caraml-doc-sync.yml
@@ -27,7 +27,7 @@ jobs:
     #       })
       - uses: actions/checkout@v3
       - id: trigger-caraml
-        uses: actions/trigger-doc-pull
+        uses: caraml-dev/docs/.github/actions/trigger-doc-pull@sync
         with:
           who-to-greet: 'Mona the Octocat'
       - run: echo random-number ${{ steps.trigger-caraml.outputs.random-number }}
