--- a/.github/workflows/trigger-caraml-doc-sync.yml
+++ b/.github/workflows/trigger-caraml-doc-sync.yml
@@ -26,6 +26,8 @@ jobs:
     #         ref: 'main'
     #       })
       - uses: actions/checkout@v3
+      - name: checkout caraml actions
+        uses: actions/checkout@v3
         with:
           repository: caraml-dev/docs
           path: .github/actions
