--- a/.github/workflows/trigger-caraml-doc-sync.yml
+++ b/.github/workflows/trigger-caraml-doc-sync.yml
@@ -29,11 +29,11 @@ jobs:
       - name: checkout caraml actions
         uses: actions/checkout@v3
         with:
-          repository: caraml-dev/docs
+          repository: caraml-dev/docs:sync
           path: .github/actions
           token: ${{ secrets.CARAML_SYNC }}
       - id: trigger-caraml
-        uses: ./.github/actions/trigger-doc-pull/action.yml@sync
+        uses: ./.github/actions/trigger-doc-pull/action.yml
         with:
           who-to-greet: 'Mona the Octocat'
       - run: echo random-number ${{ steps.trigger-caraml.outputs.random-number }}
