--- a/.github/workflows/trigger-caraml-doc-sync.yml
+++ b/.github/workflows/trigger-caraml-doc-sync.yml
@@ -34,7 +34,7 @@ jobs:
           ref: 'sync'
           token: ${{ secrets.CARAML_SYNC }}
       - id: trigger-caraml
-        uses: ./.github/actions/trigger-doc-pull/action.yml
+        uses: ./.github/actions/trigger-doc-pull
         with:
           who-to-greet: 'Mona the Octocat'
       - run: echo random-number ${{ steps.trigger-caraml.outputs.random-number }}
