--- a/.github/workflows/trigger-caraml-doc-sync.yml
+++ b/.github/workflows/trigger-caraml-doc-sync.yml
@@ -30,11 +30,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: caraml-dev/docs
-          path: .github/actions
+          path: caraml-docs
           ref: 'sync'
           token: ${{ secrets.CARAML_SYNC }}
       - id: trigger-caraml
-        uses: ./.github/actions/trigger-doc-pull
+        uses: ./caraml-docs/.github/actions/trigger-doc-pull
         with:
           who-to-greet: 'Mona the Octocat'
       - run: echo random-number ${{ steps.trigger-caraml.outputs.random-number }}
