revert back to workflow

--- a/.github/workflows/trigger-caraml-doc-sync.yml
+++ b/.github/workflows/trigger-caraml-doc-sync.yml
@@ -22,6 +22,6 @@ jobs:
           await github.rest.actions.createWorkflowDispatch({
             owner: 'caraml-dev',
             repo: 'docs',
-            workflow_id: 'pull_docs.yml',
+            workflow_id: 'test_pull_docs.yml',
             ref: 'sync'
           })
