revert back to workflow

--- a/.github/workflows/trigger-caraml-doc-sync.yml
+++ b/.github/workflows/trigger-caraml-doc-sync.yml
@@ -23,5 +23,5 @@ jobs:
             owner: 'caraml-dev',
             repo: 'docs',
             workflow_id: 'test_pull_docs.yml',
-            ref: 'sync'
+            ref: 'main'
           })
