resolve package issue

--- a/ui/package.json
+++ b/ui/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "homepage": "/merlin",
   "dependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "dagre": "^0.8.5",
+    "dagre-d3-react": "^0.2.4",
     "@elastic/datemath": "5.0.3",
     "@elastic/eui": "64.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/cache": "11.10.3",
     "eslint": "^8.1.0",
     "@gojek/mlp-ui": "1.6.1",
-    "dagre": "^0.8.5",
-    "dagre-d3-react": "^0.2.4",
     "js-yaml": "^4.1.0",
+    "levenary": "1.1.1",
     "moment": "2.29.4",
     "monaco-editor": "0.34.0",
     "@monaco-editor/react": "4.4.5",
