--- a/python/sdk/test/batch/model/env.yaml
+++ b/python/sdk/test/batch/model/env.yaml
@@ -1,9 +1,9 @@
 dependencies:
   - pip:
-      - mlflow==1.20.0
-      - scikit-learn==0.20.3
-      - joblib>=1.2.0
+      - mlflow==1.23.0
+      - scikit-learn==1.0.1  # >=1.1.2 upon python 3.7 deprecation
+      - joblib>=0.13.0,<1.2.0  # >=1.2.0 upon upgrade of kserve's version
       - numpy==1.19.5 # https://github.com/Azure/MachineLearningNotebooks/issues/1314
-      - pandas==0.25.3
+      - pandas==1.3.5
       - pytest
       - pytest-xdist
