--- a/examples/pyfunc/env.yaml
+++ b/examples/pyfunc/env.yaml
@@ -1,7 +1,7 @@
 dependencies:
   - python=3.7
   - pip:
-    - joblib
+    - joblib>=0.13.0,<1.2.0  # >=1.2.0 upon upgrade of kserve's version
     - numpy
-    - scikit-learn==0.23.1
-    - xgboost==0.82
+    - scikit-learn==1.0.1  # >=1.1.2 upon python 3.7 deprecation
+    - xgboost==1.5.0
