--- a/examples/pyfunc/requirements.txt
+++ b/examples/pyfunc/requirements.txt
@@ -1,5 +1,5 @@
-scikit-learn==0.23.1
-xgboost==0.82
+scikit-learn==1.0.1  # >=1.1.2 upon python 3.7 deprecation
+xgboost==1.5.0
 merlin-sdk
 numpy
 cloudpickle==2.0.0
