--- a/python/batch-predictor/test-model/conda.yaml
+++ b/python/batch-predictor/test-model/conda.yaml
@@ -1,4 +1,4 @@
 dependencies:
 - pip:
-  - scikit-learn==0.20.3
-  - joblib>=1.2.0
+  - scikit-learn==1.0.1  # >=1.1.2 upon python 3.7 deprecation
+  - joblib>=0.13.0,<1.2.0  # >=1.2.0 upon upgrade of kserve's version
