fix ci env var error

--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -12,7 +12,8 @@ env:
   ARTIFACT_RETENTION_DAYS: 7
   DOCKER_BUILDKIT: 1
   GO_VERSION: 1.18
-  PYTHON_VERSION: [3.7, 3.8, 3.9, 3.10]
+  PYTHON_VERSION: 3.7
+  SDK_PYTHON_VERSION: [3.7, 3.8, 3.9, 3.10]
 
 jobs:
   create-version:
@@ -96,7 +97,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ${{ env.PYTHON_VERSION }}
+        python-version: ${{ env.SDK_PYTHON_VERSION }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
