Adding UPI protocol support in standard transformer simulator (#304)
<!--  Thanks for sending a pull request!  Here are some tips for you:

1. Run unit tests and ensure that they are passing
2. If your change introduces any API changes, make sure to update the
e2e tests
3. Make sure documentation is updated for your PR!

-->

**What this PR does / why we need it**:
<!-- Explain here the context and why you're making the change. What is
the problem you're trying to solve. --->
Standard transformer simulator currently only works for HTTP_JSON
protocol, this PR is adding support for UPI_V1 protocol also.

**Modification**
* Request conversion to upi PredictValueRequest and update echo mock
model predictor for UPI_V1 protocol
* Update ui output of tracing
* Adding button to populate sample request and model predictor payload 
* Adding documentation button
**Which issue(s) this PR fixes**:
<!--
*Automatically closes linked issue when PR is merged.
Usage: `Fixes #<issue number>`, or `Fixes (paste link of issue)`.
-->

Fixes #

**Does this PR introduce a user-facing change?**:
<!--
If no, just write "NONE" in the release-note block below.
If yes, a release note is required. Enter your extended release note in
the block below.
If the PR requires additional action from users switching to the new
release, include the string "action required".

For more information about release notes, see kubernetes' guide here:
http://git.k8s.io/community/contributors/guide/release-notes.md
-->


https://user-images.githubusercontent.com/2369255/194526214-2b7c40ec-9c30-44a1-8903-53fed95a3374.mov




```release-note

```

**Checklist**

- [ ] Added unit test, integration, and/or e2e tests
- [x] Tested locally
- [ ] Updated documentation
- [ ] Update Swagger spec if the PR introduce API changes
- [ ] Regenerated Golang and Python client if the PR introduce API
changes

--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -219,6 +219,8 @@ merlin:
       },
     ]
 
+    upiDocURL: "https://github.com/caraml-dev/universal-prediction-interface/blob/main/docs/api_markdown/caraml/upi/v1/index.md"
+
     # Comma-separated value of Docker registries that can be chosen in deployment page
     dockerRegistries: ghcr.io/gojek,ghcr.io/your-company
 
