--- a/.env.sample
+++ b/.env.sample
@@ -21,7 +21,7 @@ NEWRELIC_IGNORESTATUSCODES=400,404
 # IMG_BUILDER_BUILD_CONTEXT_URI=
 # IMG_BUILDER_PREDICTION_JOB_BUILD_CONTEXT_URI=
 IMG_BUILDER_PREDICTION_JOB_DOCKERFILE_PATH=docker/app.Dockerfile
-IMG_BUILDER_PREDICTION_JOB_BASE_IMAGE=ghcr.io/gojek/merlin-pyspark-base:v0.7.0
+IMG_BUILDER_PREDICTION_JOB_BASE_IMAGE={"3.7.*":ghcr.io/gojek/merlin-pyspark-base:v0.7.0}
 IMG_BUILDER_NAMESPACE=mlp
 IMG_BUILDER_DOCKER_REGISTRY=ghcr.io/gojek
 IMG_BUILDER_TIMEOUT=10m
