--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -113,13 +113,13 @@ spec:
           - name: IMG_BUILDER_DOCKERFILE_PATH
             value: "{{ .Values.merlin.imageBuilder.dockerfilePath }}"
           - name: IMG_BUILDER_BASE_IMAGE
-            value: "{{ .Values.merlin.imageBuilder.baseImage }}"
+            value: {{ .Values.merlin.imageBuilder.baseImage | toJson | quote }}
           - name: IMG_BUILDER_PREDICTION_JOB_BUILD_CONTEXT_URI
             value: "{{ .Values.merlin.imageBuilder.predictionJobBuildContextURI }}"
           - name: IMG_BUILDER_PREDICTION_JOB_DOCKERFILE_PATH
             value: "{{ .Values.merlin.imageBuilder.predictionJobDockerfilePath }}"
           - name: IMG_BUILDER_PREDICTION_JOB_BASE_IMAGE
-            value: "{{ .Values.merlin.imageBuilder.predictionJobBaseImage }}"
+            value: {{ .Values.merlin.imageBuilder.predictionJobBaseImage | toJson | quote }}
           - name: IMG_BUILDER_NAMESPACE
             value: "{{ .Values.merlin.imageBuilder.namespace }}"
           - name: IMG_BUILDER_DOCKER_REGISTRY
