--- a/charts/merlin/values-e2e.yaml
+++ b/charts/merlin/values-e2e.yaml
@@ -62,14 +62,16 @@ merlin:
     namespace: "mlp"
     timeout: "10m"
     kanikoImage: "gcr.io/kaniko-project/executor:v1.6.0"
-    baseImage: ""
+    baseImage: 
+      3.7.*: ""
     dockerfilePath: "./Dockerfile"
     predictionJobDockerfilePath: "docker/app.Dockerfile"
     contextSubPath: "python/pyfunc-server"
     predictionJobContextSubPath: "python/batch-predictor"
     buildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.19.0"
     predictionJobBuildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.19.0"
-    predictionJobBaseImage: "ghcr.io/gojek/merlin-pyspark-base:v0.4.1"
+    predictionJobBaseImage: 
+      3.7.*: ghcr.io/gojek/merlin-pyspark-base:v0.4.1
     nodeSelectors: {}
     tolerations: []
 
